<?xml version="1.0" encoding="UTF-8"?>
<!--
 Loco xml export: Android string resources
 Project: Baseline
 Release: Working copy
 Locale: en-DK, English (Denmark)
 Tagged: android
 Exported by: DK TeamMobile
 Exported at: Sat, 28 Mar 2020 07:51:59 +0000
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Valtech Android Baseline</string>
    <string name="title_home">Team</string>
    <string name="txt_select_group">Select group*</string>
    <string name="txt_do_you_have_question">Do you have a question?</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_network">Network</string>
    <string name="title_message">Message</string>
    <string name="txt_my_profile">My profile</string>
    <string name="txt_alert">Alert</string>
    <string name="txt_counter_like">%1s like</string>
    <string name="txt_counter_likes">%1s likes</string>
    <string name="txt_counter_comment">%1s comment</string>
    <string name="txt_counter_comments">%1s comments</string>
    <string name="btn_thank_you">Thank you</string>
    <string name="btn_comments">Comment</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_greate_group">Create group</string>
    <string name="error_no_feeds">No Feeds</string>
    <string name="create_group">Create group</string>
    <string name="error_not_implemented_yet">Not implemented</string>
    <string name="btn_post">Post</string>
    <string name="btn_add_title">+ Add title</string>
    <string name="btn_delete_title">- Delete title</string>
    <string name="title_new_post">New post</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_documents">Documents</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_connections">Connections</string>
    <string name="btn_requests">Requests</string>
    <string name="txt_areas_interests">Areas of interests:\u0020</string>
    <string name="error_no_connections">No connections</string>
    <string name="tab_my_network">My Network</string>
    <string name="tab_member_directory">Member directory</string>
    <string name="tab_add_people">Add people</string>
    <string name="txt_sign_up">Don’t have an account?</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="plh_email">Enter your e-mail</string>
    <string name="plh_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="txt_login">Have an account ?</string>
    <string name="error_email_or_password_is_not_valid">Email or password is not valid</string>
    <string name="error_network_connection">No Network Connection</string>
    <string name="error_general_error">General Error</string>
    <string name="btn_selector_write_a_new_post">Write a new post in a group</string>
    <string name="btn_logout">Logout</string>
    <string name="text_select_ot_create_group">Please select or create the group in which you want to post.</string>
    <string name="title_create_group">Create Group</string>
    <string name="txt_select_upload__picture">Select or upload a profile picture*</string>
    <string name="txt_name_your_group">Name your group*</string>
    <string name="txt_select">Select</string>
    <string name="txt_anatomical_area">Anatomical area*</string>
    <string name="txt_write_description">Write a short description</string>
    <string name="txt_add_participants">Add participants</string>
    <string name="btn_close">Close</string>
    <string name="txt_field_of_activity">Field of activity*</string>
    <string name="txt_adanced_tagging">Advanced tagging ›</string>
    <string name="txt_describe_group">Describe group</string>
    <string name="txt_add_keywords">Add keywords</string>
    <string name="txt_group_participants">Group participants\u0020</string>
    <string name="btn_create_group">Create group</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_timeline">Timeline</string>
    <string name="btn_groups">Groups</string>
    <string name="txt_trauma">AO Trauma</string>
    <string name="txt_areas_of_interest">Areas of interest %1$s</string>
    <string name="btn_new_msg">New Message</string>
    <string name="btn_add_hashtag">+ Add hashtag</string>
    <string name="txt_title">Title</string>
    <string name="placeholder_signing_in">Signing you in</string>
    <string name="txt_summary_label">Summary</string>
    <string name="txt_skills_label">Skills</string>
</resources>
